; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/core/extr_sock.c_sock_no_sendpage.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/core/extr_sock.c_sock_no_sendpage.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.socket = type { i32 }
%struct.page = type { i32 }
%struct.msghdr = type { i32 }
%struct.kvec = type { i8*, i64 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @sock_no_sendpage(%struct.socket* %0, %struct.page* %1, i32 %2, i64 %3, i32 %4) #0 {
  %6 = alloca %struct.socket*, align 8
  %7 = alloca %struct.page*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i64, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca %struct.msghdr, align 4
  %13 = alloca %struct.kvec, align 8
  %14 = alloca i8*, align 8
  store %struct.socket* %0, %struct.socket** %6, align 8
  store %struct.page* %1, %struct.page** %7, align 8
  store i32 %2, i32* %8, align 4
  store i64 %3, i64* %9, align 8
  store i32 %4, i32* %10, align 4
  %15 = getelementptr inbounds %struct.msghdr, %struct.msghdr* %12, i32 0, i32 0
  %16 = load i32, i32* %10, align 4
  store i32 %16, i32* %15, align 4
  %17 = load %struct.page*, %struct.page** %7, align 8
  %18 = call i8* @kmap(%struct.page* %17)
  store i8* %18, i8** %14, align 8
  %19 = load i8*, i8** %14, align 8
  %20 = load i32, i32* %8, align 4
  %21 = sext i32 %20 to i64
  %22 = getelementptr inbounds i8, i8* %19, i64 %21
  %23 = getelementptr inbounds %struct.kvec, %struct.kvec* %13, i32 0, i32 0
  store i8* %22, i8** %23, align 8
  %24 = load i64, i64* %9, align 8
  %25 = getelementptr inbounds %struct.kvec, %struct.kvec* %13, i32 0, i32 1
  store i64 %24, i64* %25, align 8
  %26 = load %struct.socket*, %struct.socket** %6, align 8
  %27 = load i64, i64* %9, align 8
  %28 = call i32 @kernel_sendmsg(%struct.socket* %26, %struct.msghdr* %12, %struct.kvec* %13, i32 1, i64 %27)
  store i32 %28, i32* %11, align 4
  %29 = load %struct.page*, %struct.page** %7, align 8
  %30 = call i32 @kunmap(%struct.page* %29)
  %31 = load i32, i32* %11, align 4
  ret i32 %31
}

declare dso_local i8* @kmap(%struct.page*) #1

declare dso_local i32 @kernel_sendmsg(%struct.socket*, %struct.msghdr*, %struct.kvec*, i32, i64) #1

declare dso_local i32 @kunmap(%struct.page*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
